# BrightFuture

./: Async.hh  BrightFuture.hh  CMakeLists.txt  LocalTest.cc  README.md
doc/: Design.md  Doxyfile.in  Primer.md
executor/: BoostAsioExecutor.cc  BoostAsioExecutor.hh  QtGuiExecutor.hh
include/: BridgeFuture.hh
test/: LocalTest.cc
